fluxcd/catalog/monitoring/prometheus/ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: prometheus
  namespace: monitoring
spec:
  # ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - backend:
              service:
                name: prometheus-operated
                port:
                  number: 9090
            path: /monitoring/prometheus(/|$)(.*)
            pathType: ImplementationSpecific
